# pyxis

./: .coveragerc  .env  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  CmakeLists.txt  README.md  changelog.md  cliff.toml  lcov.info  lefthook.yaml  pixi.toml  pyproject.toml  pyxis.code-workspace  renovate.json  rustfmt.toml  setup.cfg  typos.toml
cpp/: CMakeLists.txt
cpp/include/: cuda_macro.h  datum_compensate.h  datum_compense.h  pyxis.h
cpp/rattler/: build-pyxis-cpp.ps1  ci-pyxis-cpp.ps1  pixi.toml  recipe.yaml
cpp/scripts/: build-cpp.ps1
cpp/src/: crypto.cpp  datum_compensate.cpp  datum_compense.cpp
crates/geotool-algorithm/: Cargo.toml
crates/geotool-algorithm/benches/: crypto.rs  datum_compense.rs
crates/geotool-algorithm/src/: angle.rs  crypto.rs  ellipsoid.rs  geometry_coordinate.rs  lib.rs  linear.rs  linear_transform.rs  migrate.rs  misc.rs  space.rs  transform.rs  types.rs
crates/geotool-cli/: Cargo.toml
crates/geotool-cli/src/: cli.rs  config_logger.rs  constants.rs  main.rs  proj_util.rs
crates/geotool-cli/tests/: test_crypto.rs  test_datum_compense.rs  test_lbh2xyz.rs  test_main.rs  test_migrate2d.rs  test_normalize.rs  test_output.rs  test_proj.rs  test_rotate.rs  test_scale.rs  test_space.rs  test_translate.rs  test_xyz2lbh.rs
crates/py-geotool/: Cargo.toml  pyproject.toml
crates/py-geotool/geotool/: __init__.pyi  _angle.py  _crypto.py  _migrate.py  _space.py  _transform.py  _transformation_residuals.py  _utils.py
crates/py-geotool/src/: crypto.rs  geometry_coordinate.rs  lib.rs  misc.rs  space.rs  transform.rs
crates/py-geotool/tests/: test_angle.py  test_crypto.py  test_geometry_coordinate.py  test_migrate.py  test_space.py  test_transfrom.py
crates/pyxis-cli/: Cargo.toml
crates/pyxis-cli/tests/: test_crypto.rs  test_lbh2xyz.rs  test_output.rs  test_xyz2lbh.rs
crates/pyxis-cuda/: Cargo.toml  CmakeLists.txt  build.rs  lib.rs
crates/pyxis-cuda/benches/: datum_compense_cuda.rs
crates/pyxis-cuda/src/: add.ptx  context.rs  crypto_cuda.rs  datum_compense.ptx  datum_compense_cuda.rs  lib.rs  main.rs
crates/pyxis-cuda/src_cuda/: add.cu  crypto.cpp  crypto_cuda.cu  datum_compense.cpp  datum_compense.cu  datum_compense_cuda.cu
cuda/: .gitignore  CMakeLists.txt  pixi.toml
cuda/rattler/: build-pyxis-cuda.ps1  ci-pyxis-cuda.ps1  pixi.toml  recipe.yaml
cuda/scripts/: build-cuda.ps1
cuda/src/: crypto_cuda.cu  datum_compensate_cuda.cu  datum_compense_cuda.cu
python/: .gitignore  Cargo.toml  pixi.toml  pyproject.toml
python-cuda/: .gitignore  coverage.xml  junit.xml  pixi.toml  pyproject.toml
python-cuda/benches/: test_datum_compensate.py
python-cuda/pyxis_cuda/: __init__.pyi  _crypto_cuda.py  _datum_compensate_cuda.py  _utils.py
python-cuda/rattler/: build-pyxis-py-cuda.ps1  ci-pyxis-cuda-py.ps1  ci-pyxis-py-cuda.ps1  recipe.yaml  variants.yaml
python-cuda/scripts/: build-cuda.ps1  pytest.ps1
python-cuda/src/pyxis_cuda/: _crypto_cuda.py  _datum_compensate_cuda.py
python-cuda/tests/: test_crypto_cuda.py  test_datum_compensate_cuda.py
python/benches/: test_datum_compensate.py  test_datum_compense.py  test_datum_compense_vector.py
python/doc/source/: conf.py
python/pyxis/: __init__.pyi  _angle.py  _crypto.py  _datum_compensate.py  _datum_compense.py  _gauss_projection.py  _space.py  _utils.py
python/pyxis/pyxis_cuda/: __init__.pyi  _context.py  _crypto.py  _crypto_cuda.py  _datum_compensate_cuda.py  _datum_compense.py  _datum_compense_cuda.py  _utils.py
python/rattler/: build-pyxis-py.ps1  ci-pyxis-py.ps1  recipe.yaml
python/scripts/: bench.ps1  build-cuda.ps1  build-python-whl.ps1  cargo-clippy.ps1  cargo-clippy1.ps1  cargo-fmt.ps1  cargo-machete.ps1  maturin-develop.ps1  numpydoc.ps1  py-develop.ps1  py-pytest.ps1  py-sphinx.ps1  pytest.ps1  sphinx.ps1
python/src/: crypto.rs  datum_compensate.rs  datum_compense.rs  gauss_projection.rs  lib.rs  space.rs
python/tests/: test_angle.py  test_crypto.py  test_datum_compensate.py  test_datum_compense.py  test_gauss_projection.py  test_migrate.py  test_space.py
python/tests/__snapshots__/: test_crypto.ambr
python/tests/test_pyxis_cuda/: test_crypto_cuda.py  test_datum_compensate_cuda.py  test_datum_compense_cuda.py
rust/: .gitignore  Cargo.toml  Cross.toml  katex.html  pixi.toml  rust-toolchain.toml  rustfmt.toml
rust-cuda/: .gitignore  Cargo.toml  build.rs  coverage.xml  lcov.info  nextest.junit.xml  pixi.toml
rust-cuda/.cargo/: config.toml
rust-cuda/.config/: nextest.toml
rust-cuda/benches/: datum_compensate_cuda.rs
rust-cuda/scripts/: build-rust-cuda.ps1  cargo-bench.ps1  cargo-clean.ps1  cargo-clippy.ps1  cargo-fmt.ps1  cargo-test.ps1  set-env.ps1  setup.ps1  update-test-report.ps1
rust-cuda/src/: context.rs  crypto_cuda.rs  datum_compensate_cuda.rs  lib.rs
rust-cuda/src/src/: datum_compensate_cuda.ptx
rust/.cargo/: config.toml
rust/.github/workflows/: ci.yml
rust/crates/gnss-receiver/: Cargo.toml
rust/crates/proj/: Cargo.toml  README.md  build.rs  readme.md
rust/crates/proj-sys/: Cargo.toml  build.rs
rust/crates/pyxis/: Cargo.toml
rust/crates/pyxis-abacus/: Cargo.toml
rust/crates/pyxis-cli/: Cargo.toml  build.rs
rust/crates/pyxis-cuda/: Cargo.toml  build.rs
rust/crates/pyxis-trail/: Cargo.toml
rust/rattler/: build-pyxis-abacus.ps1  build-pyxis-cli.ps1  build-pyxis.ps1  ci-pyxis-abacus.ps1  ci-pyxis-cli.ps1  ci-pyxis.ps1  pixi.toml  recipe.yaml
rust/scripts/: build-python-whl.ps1  build-rust-abacus.ps1  build-rust-cli.ps1  build-rust-cuda.ps1  cargo-bench.ps1  cargo-clippy-cuda.ps1  cargo-clippy.ps1  cargo-doc.ps1  cargo-fmt.ps1  cargo-test.ps1  cross-build-linux-aarch64.ps1  proj-bindings.ps1  py-numpydoc.ps1  set-env.ps1  setup.ps1
rust/vcpkg/: .gitignore  vcpkg-install.ps1  vcpkg-update-baseline.ps1  vcpkg.json
src/py/: Cargo.toml
src/py/scripts/: build-py.ps1  py-develop.ps1  py-numpydoc.ps1  py-pytest.ps1  py-sphinx.ps1
src/rust/: Cargo.toml
tools/gnss-receiver/: Cargo.toml
tools/pyxis-cli/: Cargo.toml
(+654 files in other folders)
