[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.9"
edition = "2024"

[workspace.dependencies]
geotool-algorithm = { path = "crates/geotool-algorithm" }

assert_cmd = "2.0"
bpaf = { version = "0.9.17", features = ["derive", "batteries"] }
criterion = { package = "codspeed-criterion-compat", version = "*" }
dialoguer = "0.11.0"
float-cmp = "0.10.0"
log-template = { git = "https://github.com/Glatzel/rs-log-template", tag = "v0.0.2" }
miette = "7.5.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
numpy = "0.23.0"
predicates = "3.1"
proj = { version = "0.28.0", default-features = false }
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py311"] }
pyo3-build-config = { version = "0.23.5", features = ["resolve-config"] }
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.dist]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = true
