[package]
edition = "2024"
name = "pyxis-py"
version = "0.0.29"

[dependencies]
numpy = "0.25.0"
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py311"] }
pyxis = { path = "./../rust/crates/pyxis/" }
rayon = "1.10.0"

[lib]
crate-type = ["cdylib"]
name = "pyxis_py"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = true

[profile.develop]
inherits = "dev"
