[package]
name = "pyxis-py"
version = "0.0.43"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "pyxis_py"

[dependencies]
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = ["abi3-py313", "extension-module"] }
pyxis = { path = "./../rust/crates/pyxis/" }
rayon = "1.11.0"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
