[package]
name = "pyxis-py"
version = "0.0.44"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "pyxis_py"

[dependencies]
numpy = "0.29.0"
pyo3 = { version = "0.29.0", features = ["abi3-py313", "extension-module"] }
pyxis = { path = "./../rust/crates/pyxis/" }
rayon = "1.12.0"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
