[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyxis"
requires-python = ">=3.11"
dynamic = ["version"]
authors = [{ name = "Glatzel", email = "893016099@qq.com" }]
dependencies = ["lazy-loader", "numpy", "scipy"]

[project.optional-dependencies]
gpu = ["cupy"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyxis.pyxis_py"
