[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
authors = [{ name = "Glatzel", email = "893016099@qq.com" }]
dependencies = ["lazy-loader", "numpy", "scipy"]
dynamic = ["version"]
name = "pyxis"
requires-python = ">=3.11"

[project.optional-dependencies]
gpu = ["cupy"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyxis.pyxis_py"
