[package]
name = "pyxis-cuda"
edition = "2024"
version = "0.0.21"

[dependencies]
clerk = { git = "https://github.com/Glatzel/clerk", tag = "v0.0.10" }
cust = "0.3"
pyxis = { path = "./../rust/crates/pyxis/" }

[dev-dependencies]
float-cmp = "0.10.0"
rand = "0.9.0"
criterion = "0.5.1"

[build-dependencies]
dunce = "1.0.5"
glob = "0.3.2"
path-slash = "0.2.1"

[features]
log = ["clerk/log"]

[[bench]]
harness = false
name = "datum_compensate_cuda"

[[bench]]
harness = false
name = "crypto_cuda"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = true

[profile.develop]
inherits = "dev"
