[workspace]
resolver = "2"
members = ["./crates/*"]

[workspace.package]
version = "0.0.43"
edition = "2024"

[workspace.dependencies]
proj = { path = "./crates/proj" }
proj-sys = { path = "./crates/proj-sys" }
pyxis = { path = "./crates/pyxis" }

clerk = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.4.16" }
envoy = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.4.16" }
mischief = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.4.16" }
rax = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.4.16" }
rax-nmea = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.4.16" }
serialport-ext = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.4.16" }

bindgen = "0.72"
criterion = { package = "codspeed-criterion-compat", version = "4.0.0" }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
dunce = "1.0.5"
float-cmp = "0.10.0"
insta = "1.46.1"
libc = "0.2"
num_enum = "0.7.4"
num-traits = "0.2.19"
path-slash = "0.2.1"
rand = "0.10.0"
rstest = "0.26.1"
serde = { version = "1.0.226", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0.16"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
