[package]
name = "geotool-algorithm"
version.workspace = true
edition.workspace = true

[dependencies]
log-template = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
float-cmp = { workspace = true }

[features]
log = ["dep:tracing","dep:tracing-subscriber","dep:log-template"]
serde = ["dep:serde"]

[[bench]]
name = "datum_compense"
harness = false

[[bench]]
name = "crypto"
harness = false
