[package]
name = "geotool-algorithm"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
float-cmp = { workspace = true }
log-template = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
log = ["dep:tracing"]
serde = ["dep:serde"]

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "datum_compense"
harness = false
