[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "geotool"
requires-python = ">=3.11"
dynamic = ["version"]
authors = [{ name = "Glatzel", email = "893016099@qq.com" }]
dependencies = ["lazy-loader", "numpy", "scipy","pyproj"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "geotool.py_geotool"