[package]
name = "pyxis-cuda"
version.workspace = true
edition.workspace = true

[dependencies]
cust = { workspace = true }
pyxis = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }
criterion-cuda = { workspace = true }
[[bench]]
name = "datum_compense_cuda"
harness = false
