[package]
name = "pyxis-py"
version = "0.0.10"
edition = "2024"

[dependencies]
miette = "7.5.0"
numpy = "0.23.0"
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py311"] }
pyxis = { path = "../rust/crates/pyxis/" }
rayon = "1.10.0"

[lib]
name = "pyxis_py"
crate-type = ["cdylib"]
