[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.11"
edition = "2024"

[workspace.dependencies]
pyxis = { path = "crates/pyxis" }

criterion = { package = "codspeed-criterion-compat", version = "*" }
dunce = "1.0.5"
float-cmp = "0.10.0"
glob = "0.3.2"
log-template = { git = "https://github.com/Glatzel/rs-log-template", tag = "v0.0.2" }
miette = "7.5.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
path-slash = "0.2.1"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.dist]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = true
