[package]
name = "pyxis-cli"
version = "0.0.43"
edition = "2024"

[[bin]]
name = "pyxis"
path = "src/main.rs"

[dependencies]
clerk = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.4.16", features = [
  "tracing"
] }
mischief = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.4.16", features = [
  "fancy"
] }

proj = { path = "../../rust/crates/proj" }
pyxis = { path = "../../rust/crates/pyxis", features = ["serde"] }

bpaf = { version = "0.9.20", features = ["batteries", "derive"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.2.0"
insta = { version = "1.46.1", features = ["filters"] }
rstest = "0.26.1"
