[package]
name = "pyxis-cli"
version = "0.0.44"
edition = "2024"

[[bin]]
name = "pyxis"
path = "src/main.rs"

[dependencies]
clerk = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.7.6", features = [
  "tracing"
] }
mischief = { git = "https://github.com/Glatzel/toolbox", tag = "v2026.7.6", features = [
  "fancy"
] }

proj = { path = "../../rust/crates/proj" }
pyxis = { path = "../../rust/crates/pyxis", features = ["serde"] }

bpaf = { version = "0.9.26", features = ["batteries", "derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.48.0", features = ["filters"] }
rstest = "0.26.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
