[package]
edition.workspace = true
name = "proj-sys"
version.workspace = true
[dependencies]
link-cplusplus = { workspace = true }
[build-dependencies]
bindgen = { workspace = true, optional = true }
clerk = { workspace = true, features = ["log"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pkg-config = { workspace = true }

[features]
bindgen = ["dep:bindgen"]
update = []
