[package]
edition.workspace = true
name = "proj"
version.workspace = true

[dependencies]
clerk = { workspace = true }
envoy = { workspace = true }
num_enum = { workspace = true }
proj-sys = { workspace = true }
serde = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
clerk = { workspace = true, features = ["log"] }
dunce = { workspace = true }
float-cmp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mischief = { workspace = true ,features = ["fancy"]}

[features]
serde = ["dep:serde"]
