[package]
name = "proj"
version.workspace = true
edition.workspace = true

[dependencies]
clerk.workspace = true
derive-getters.workspace = true
envoy.workspace = true
num_enum.workspace = true
proj-sys.workspace = true
serde = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
clerk = { workspace = true, features = ["tracing"] }
dunce.workspace = true
float-cmp.workspace = true
insta = { workspace = true }
mischief = { workspace = true, features = ["fancy"] }

[features]
serde = ["dep:serde"]
