[package]
edition.workspace = true
name = "pyxis-cli"
version.workspace = true

[[bin]]
name = "pyxis"
path = "src/main.rs"

[dependencies]
bpaf = { workspace = true }
chrono = { workspace = true }
clerk = { workspace = true, features = ["log", "serde"] }
crossterm = { workspace = true }
directories = { workspace = true }
miette = { workspace = true }
proj = { workspace = true }
pyxis = { workspace = true, features = ["serde", "log"] }
ratatui = { workspace = true }
rax = { workspace = true, features = ["async"] }
rax-nmea = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-serial = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
async-trait = { workspace = true }
float-cmp = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

