[package]
edition.workspace = true
name = "pyxis-cli"
version.workspace = true

[dependencies]
bpaf = { workspace = true }
chrono = { workspace = true }
clerk = { workspace = true, features = ["log", "serde"] }
crossterm = { workspace = true }
directories = { workspace = true }
jsonschema = { workspace = true }
parking_lot = { workspace = true }
proj = { workspace = true }
pyxis = { workspace = true, features = ["serde"] }
ratatui = { workspace = true }
rax = { workspace = true, features = ["async", "device"] }
rax-nmea = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-serial = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mischief = { workspace = true ,features = ["fancy"]}

[dev-dependencies]
assert_cmd = { workspace = true }
async-trait = { workspace = true }
float-cmp = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "pyxis"
path = "src/main.rs"

[[bin]]
name = "deadlock_detection"
path = "tools/deadlock_detection.rs"

[[bin]]
name = "export-schema"
path = "tools/export_schema.rs"

[[bin]]
name = "list-devices"
path = "tools/list_devices.rs"
