[package]
edition.workspace = true
name = "pyxis-cli"
version.workspace = true

[dependencies]
bpaf.workspace = true
chrono.workspace = true
clerk = { workspace = true, features = ["tracing", "serde"] }
mischief = { workspace = true, features = ["fancy"] }
proj.workspace = true
pyxis = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta={workspace = true,features = ["filters"]}
rstest.workspace = true

[[bin]]
name = "pyxis"
path = "src/main.rs"
