[package]
name = "pyxis-cuda"
version.workspace = true
edition.workspace = true

[dependencies]
cust = { workspace = true }
pyxis = { workspace = true }
clerk = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
float-cmp= { workspace = true }
rand = { workspace = true }

[build-dependencies]
glob = { workspace = true }
path-slash= { workspace = true }
dunce= { workspace = true }

[features]
log = ["clerk/log"]

[[bench]]
name = "datum_compense_cuda"
harness = false

[[bench]]
name = "crypto_cuda"
harness = false
