[package]
edition.workspace = true
name = "pyxis-cuda"
version.workspace = true

[dependencies]
clerk = { workspace = true }
cust = { workspace = true }
pyxis = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
float-cmp = { workspace = true }
rand = { workspace = true }

[build-dependencies]
dunce = { workspace = true }
glob = { workspace = true }
path-slash = { workspace = true }

[features]
log = ["clerk/log"]

[[bench]]
harness = false
name = "datum_compense_cuda"

[[bench]]
harness = false
name = "crypto_cuda"
