[package]
edition.workspace = true
name = "pyxis"
version.workspace = true

[dependencies]
clerk = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
clerk = { workspace = true, features = ["log"] }
criterion = { workspace = true }
float-cmp = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
log = ["clerk/log"]
serde = ["dep:serde"]

[[bench]]
harness = false
name = "crypto"

[[bench]]
harness = false
name = "datum_compensate"
