[package]
name = "pyxis"
version.workspace = true
edition.workspace = true

[[bench]]
harness = false
name = "crypto"

[[bench]]
harness = false
name = "datum_compensate"

[dependencies]
clerk.workspace = true
num-traits.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
clerk = { workspace = true, features = ["tracing"] }
criterion.workspace = true
float-cmp.workspace = true
rand.workspace = true

[features]
serde = ["dep:serde"]
