[package]
name = "pyxis-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pyxis"
path = "src/main.rs"

[dependencies]
bpaf = { workspace = true }
clerk= { workspace = true }
miette = { workspace = true }
proj = { workspace = true }
pyxis = { workspace = true, features = ["serde","log"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
float-cmp = { workspace = true }
predicates = { workspace = true }

[features]
static = []
