[package]
name = "pyxis-cuda"
version.workspace = true
edition.workspace = true

[dependencies]
cust = { workspace = true }
pyxis = { workspace = true }
tracing = { workspace = true,features=["default","release_max_level_off","max_level_off"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
float-cmp= { workspace = true }
rand = { workspace = true }

[build-dependencies]
glob = { workspace = true }
path-slash= { workspace = true }
dunce= { workspace = true }

[features]
default=["tracing","tracing/release_max_level_off","tracing/max_level_off"]
log = ["tracing","tracing/default"]

[[bench]]
name = "datum_compense_cuda"
harness = false

[[bench]]
name = "crypto_cuda"
harness = false
