[package]
name = "pyxis"
version.workspace = true
edition.workspace = true

[dependencies]
num-traits =  { workspace = true }
serde = { workspace = true, optional = true }
tracing = { workspace = true,features=["default","release_max_level_off","max_level_off"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
float-cmp = { workspace = true }
clerk = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default=["tracing","tracing/release_max_level_off","tracing/max_level_off"]
log = ["tracing","tracing/default"]
serde = ["dep:serde"]

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "datum_compense"
harness = false
