[package]
name = "pyxis"
version.workspace = true
edition.workspace = true

[dependencies]
num-traits =  { workspace = true }
serde = { workspace = true, optional = true }
clerk = { workspace = true}

[dev-dependencies]
criterion = { workspace = true }
float-cmp = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
log = ["clerk/log"]
serde = ["dep:serde"] 

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "datum_compense"
harness = false
